# simple_flask

./: Dockerfile  Makefile  README.md  docker-compose.yaml  env_sample.txt  main.py  pyproject.toml
installer/: requirements.txt
